--- a/.gitignore
+++ b/.gitignore
@@ -37,5 +37,9 @@ Thumbs.db
 # Ignore built ts files
 dist/**/*
 
+# Go binary
+alternate-assets
+alternate-assets.exe
+
 # ignore yarn.lock
 yarn.lock
